@@ -868,7 +868,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"writeLines", do_writelines, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"readBin", do_readbin, 0, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"writeBin", do_writebin, 0, 211, 4, {PP_FUNCALL, PREC_FN, 0}},
-    {"readChar", do_readchar, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"readChar", do_readchar, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"writeChar", do_writechar, 0, 211, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"open", do_open, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"isOpen", do_isopen, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
